<resources>
    <string name="app_name">Baby Dots</string>
    <string name="colour_scheme">Colour Scheme</string>
    <string name="size">Size</string>
    <string name="speed">Speed</string>
    <string name="shape">Shape</string>
    <string name="mute">Mute</string>
    <string name="about">About</string>
    <string name="url_github">https://github.com/babydots/babydots</string>
    <string name="attribution">"<a href="https://freemusicarchive.org/music/John_Harrison_with_the_Wichita_State_University_Chamber_Players/The_Four_Seasons_Vivaldi/01_-_Vivaldi_Spring_mvt_1_Allegro_-_John_Harrison_violin">Vivaldi - The Four Seasons - Spring, Movement 1 - By John Harrison w/ Wichita State University Chamber</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a>)           <a href="https://freemusicarchive.org/music/Kevin_MacLeod/Classical_Sampler/Gymnopedie_No_1">Erik Satie - Gymnopedie No 1 - By Kevin MacLeod</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a>)           <a href="https://freemusicarchive.org/music/Kevin_MacLeod/Classical_Sampler/Canon_in_D_Major">J. Pachelbel - Canon in D Major - By Kevin MacLeod</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a>)     "</string>
    <string name="about_suggestions">Suggestions and bug reports</string>
    <string name="about_credits">Credits</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_time">Sleep time</string>
    <string name="resume_dots_button">Resume dots</string>
    <string name="back">Back</string>
    <string name="stop_sleep_time_message">Resume dots, remove the sleep timer, and exit sleep time.</string>
    <string name="sleep_timer_description">When the timer reaches zero, the screen will dim, the music will pause, and the screen will turn off soon after.</string>
    <string name="settings">Settings</string>
    <plurals name="pref_x_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="stop_timer_button">Stop timer</string>
    <string name="sleep_timer_started_help_text">Touch the sleep timer for more info.</string>
    <string name="screen_unlocked">Screen unlocked</string>
    <string name="lock">Lock</string>
    <string name="touch_to_unlock">Touch to unlock</string>
    <plurals name="touch_lock_to_unlock">
        <item quantity="one">Quickly touch the lock %d more time to unlock.</item>
        <item quantity="other">Quickly touch the lock %d more times to unlock.</item>
    </plurals>
    <string name="song_vivaldi">The Four Seasons - Spring, Movement 1</string>
    <string name="song_canon_in_d_major">Canon in D Major</string>
    <string name="song_gymnopedie_1">Gymnopedie No 1</string>
    <string name="music">Music</string>
</resources>
