<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sound"
        android:icon="@drawable/ic_sound_on"
        android:title="@string/colour_scheme"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_colour"
        android:icon="@drawable/ic_colour"
        android:title="@string/colour_scheme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_size"
        android:icon="@drawable/ic_size"
        android:title="@string/size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_speed"
        android:icon="@drawable/ic_speed"
        android:title="@string/speed"
        app:showAsAction="ifRoom" />

</menu>